# brain-region-database

./: QUERIES.md  README.md  pyproject.toml
demo/: mni_icbm152_CerebrA_tal_nlin_sym_09c.nii
demo/logs/: 100.txt  200.txt
demo/logs/2d/: 100.txt  1000.txt  200.txt  500.txt
demo/logs/3d/: 100.txt  1000.txt  200.txt  500.txt
demo/logs/none/: 100.txt  1000.txt  200.txt  500.txt
demo/regions/: README.md  demo_587630_V1_t1_001_regions_100.json  demo_587630_V1_t1_001_regions_200.json
demo/scans/: demo_587630_V1_t1_001.nii
src/brain_region_database/: atlas.py  nifti.py  scan.py  util.py
src/brain_region_database/database/: engine.py  geometries.py  models.py  monitor.py  queries.py  query.py
src/brain_region_database/process/: orientation.py  size.py  spatialization.py  vectorization.py
src/brain_region_database/scripts/: analyze_scan_regions.py  create_database.py  debug.py  extract_scan_regions.py  filter_scan_regions.py  find_intersect_regions.py  find_intersecting_regions.py  insert_scan.py  patch_scan.py  randomize_scan.py  visualize_database_regions.py  visualize_file_regions.py  visualize_scan_regions.py
src/brain_region_extractor/: database.py  nifti.py  scan.py  statistics.py  util.py
src/brain_region_extractor/database/: insertion.py  models.py
src/brain_region_extractor/scripts/: analyze_scan_regions.py  create_database.py  extract_scan_regions.py  patch_scan.py
