[build-system]
requires = ["uv_build>=0.9.8"]
build-backend = "uv_build"

[project]
name = "brain-region-database"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "antspyx",
    "fast-simplification",
    "geoalchemy2",
    "nibabel",
    "nilearn>=0.12.1",
    "numpy>=2.3.4",
    "psycopg2-binary",
    "pydantic",
    "pyvista",
    "scikit-image",
    "sqlalchemy",
    "trimesh",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[project.scripts]
create-database            = "brain_region_database.scripts.create_database:main"
extract-scan-regions       = "brain_region_database.scripts.extract_scan_regions:main"
filter-scan-regions        = "brain_region_database.scripts.filter_scan_regions:main"
find-intersecting-regions  = "brain_region_database.scripts.find_intersecting_regions:main"
insert-scan                = "brain_region_database.scripts.insert_scan:main"
patch-scan                 = "brain_region_database.scripts.patch_scan:main"
randomize-scan             = "brain_region_database.scripts.randomize_scan:main"
visualize-database-regions = "brain_region_database.scripts.visualize_database_regions:main"
visualize-file-regions     = "brain_region_database.scripts.visualize_file_regions:main"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = ["E202", "E203", "E221", "E241", "E251", "E272"]
select = ["E", "F", "I", "N", "RUF", "UP", "W"]
